Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90466

Missing line number in tst_qquickloader error message on macOs

XMLWordPrintable

    • macOS
    • c02b0e529a (qt/qtdeclarative/dev) c02b0e529a (qt/tqtc-qtdeclarative/dev) db6d4673a0 (qt/qtdeclarative/6.4) 03f9724cb2 (qt/qtdeclarative/6.3) 03f9724cb2 (qt/tqtc-qtdeclarative/6.3) db6d4673a0 (qt/tqtc-qtdeclarative/6.4) 03f9724cb2 (qt/qtdeclarative/6.3.2)

      No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          ulherman Ulf Hermann
          fabiankosmale Fabian Kosmale
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

            Created:
            Updated:
            Resolved: