Qml: When cloning a stack frame, also clone its instruction pointer

Otherwise we get an out of range access when looking for the line
number. To be extra safe, we also add another guard against this to the
lineNumber() function.

Fixes: QTBUG-90466
Change-Id: I4d9cb52ecba2631696537f02a3c1b75c3658ceb8
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit c02b0e529a3266cce2f7d852deca7774402b236e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>