tests/auto/quick/qquickloader/tst_qquickloader.cpp
@@ -711,7 +711,7 @@ void tst_QQuickLoader::initialPropertyValues_data()
             << (QVariantList() << 12);
 
     QTest::newRow("initial property errors get reported") << testFileUrl("initialPropertyTriggerException.qml")
-                                                          << (QStringList() << "^.*: Error: Cannot assign JavaScript function to int")
+                                                          << (QStringList() << "^.*:10: Error: Cannot assign JavaScript function to int")
                                                           << QStringList()
                                                           << QVariantList();
 }
